--- a/src/style.css
+++ b/src/style.css
@@ -25,3 +25,11 @@
     background-color: rgb(87, 85, 85);
     cursor: pointer;
 }
+
+.bold-text {
+    font-size: 2rem;
+}
+
+.bolden {
+    font-size: 1.5rem;
+}
