--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,14 @@
     justify-content: space-between;
 }
 
+.show-project {
+    border-radius: 5px;
+    border: 1px solid rgb(96, 236, 96);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .radio {
     width: 25px;
     height: 25px;
