Create edit DOM element

--- a/src/style.css
+++ b/src/style.css
@@ -65,3 +65,19 @@
 .icons {
     font-size: 1rem;
 }
+
+.fa-pencil-alt {
+    cursor: pointer;
+}
+
+.fa-trash-alt {
+    cursor: pointer;
+}
+
+.dom-task {
+    border-radius: 5px;
+    border: 1px solid rgb(96, 236, 96);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
